--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
   <application
     android:name="com.sparkleside.App"
     android:allowBackup="true"
-    android:enableOnBackInvokedCallback="false"
+    android:enableOnBackInvokedCallback="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:localeConfig="@xml/local_config"
@@ -30,35 +30,28 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+
     <activity
       android:name=".ui.activities.TerminalActivity"
       android:exported="true"
-      android:windowSoftInputMode="adjustResize"
-      android:enableOnBackInvokedCallback="false" />
-
+      android:windowSoftInputMode="adjustResize" />
     <activity
       android:name="com.sparkleside.ui.activities.SettingsActivity"
-      android:exported="true"
-      android:enableOnBackInvokedCallback="false" />
+      android:exported="true" />
     <activity
       android:name="com.sparkleside.ui.activities.AboutActivity"
-      android:exported="true"
-      android:enableOnBackInvokedCallback="false" />
+      android:exported="true" />
     <activity
       android:name="com.sparkleside.ui.activities.AppearanceActivity"
-      android:exported="true"
-      android:enableOnBackInvokedCallback="false" />
+      android:exported="true" />
     <activity
       android:name="com.sparkleside.ui.activities.CodeEditorSettingsActivity"
-      android:exported="true"
-      android:enableOnBackInvokedCallback="false" />  
+      android:exported="true" />
     <activity
       android:name="com.sparkleside.ui.activities.MarkdownActivity"
-      android:exported="true"
-      android:enableOnBackInvokedCallback="false" />  
-      <activity
+      android:exported="true" />
+    <activity
       android:name="com.sparkleside.ui.activities.HtmlViewerActivity"
-      android:exported="true"
-      android:enableOnBackInvokedCallback="false" />    
+      android:exported="true" />
   </application>
 </manifest>
